--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -292,7 +292,7 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td A
+                                                td G
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -300,11 +300,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm Draft
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td A
+                                                td DL
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -312,11 +312,11 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm Draft
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td A
+                                                td DR
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -324,16 +324,101 @@ section.nl-section.nl-players.nl-create-team
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm Draft
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td A
+                                                td DAL
                                                 td RMA
                                                 td ACT
                                                 td FCB
                                                 td 09/17/17
                                                 td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td DAR
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td CM
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td RWM
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td LWM
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td RS
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td LS
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17
+                                                td <a href="#"><span class="info">i</span></a>
+                                            tr
+                                                td
+                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
+                                                td $21000
+                                                td 20
+                                                td ST
+                                                td RMA
+                                                td ACT
+                                                td FCB
+                                                td 09/17/17
+                                                td <a href="#"><span class="info">i</span></a>
+
 
 
 
@@ -366,67 +451,67 @@ section.nl-section.nl-players.nl-create-team
                     div.midfielder-line
                     div.defender-line
                     div.player-main-block
-                        div.nl-player-block.nl-G-position
+                        div.nl-player-block.nl-G-position(data-position="G")
                             img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-DL-position
+                        div.nl-player-block.nl-DL-position(data-position="DL")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-DR-position
+                        div.nl-player-block.nl-DR-position(data-position="DR")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-DAL-position
+                        div.nl-player-block.nl-DAL-position(data-position="DAL")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-DAR-position
+                        div.nl-player-block.nl-DAR-position(data-position="DAR")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-CM-position
+                        div.nl-player-block.nl-CM-position(data-position="CM")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-RWM-position
+                        div.nl-player-block.nl-RWM-position(data-position="RWM")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-LWM-position
+                        div.nl-player-block.nl-LWM-position(data-position="LWM")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-RS-position
+                        div.nl-player-block.nl-RS-position(data-position="RS")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-LS-position
+                        div.nl-player-block.nl-LS-position(data-position="LS")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-ST-position
+                        div.nl-player-block.nl-ST-position(data-position="ST")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
