# Create Team Page: add table view

--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -433,3 +433,96 @@ section.nl-section.nl-players.nl-create-team
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
 
+                div.nl-team-list.nl-my-teams
+                    .nl-card-wrapper
+                        .row
+                            .col-12
+                                div.nl-team-card.table-data-field
+                                    h3 team NLC2
+                                    <img src="assets/img/helmet.png" alt="helmet">
+
+                        .row
+                            .col-12
+                                table.table.table-striped
+                                    thead
+                                        tr
+
+                                            th NAME
+                                            th POS
+                                            th FP
+                                            th SALARY
+                                            th
+
+                                    tbody
+                                        tr
+
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                            td
+                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                        tr
+
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                            td
+                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                        tr
+
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                            td
+                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                        tr
+
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                            td
+                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                        tr
+
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                            td
+                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                        tr
+
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                            td
+                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                        tr
+
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                            td
+                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                        tr
+
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                            td
+                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                        tr
+
+                                            td Player name
+                                            td.pos D
+                                            td 30
+                                            td $0
+                                            td
+                                                button.btn.btn-primary.btn-sm.btn-warning cut
