--- a/markup/_scss/sections/_nl-my-teams.scss
+++ b/markup/_scss/sections/_nl-my-teams.scss
@@ -180,6 +180,9 @@
     .salary{
       color: #0fbf0c;
     }
+    .pos{
+      color: #e58607;
+    }
   }
 
   .table td:not(:first-child),.table th{
