--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -769,7 +769,7 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td G
+                                                td FLEX
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -781,7 +781,7 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td DL
+                                                td K
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -793,7 +793,7 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td DR
+                                                td LRB
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -805,7 +805,7 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td DAL
+                                                td RRB
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -817,7 +817,7 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td DAR
+                                                td QB
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -829,7 +829,7 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td CM
+                                                td LWR
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -841,7 +841,7 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td RWM
+                                                td RWR
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -853,43 +853,7 @@ section.nl-section.nl-players.nl-create-team
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
-                                                td LWM
-                                                td RMA
-                                                td ACT
-                                                td FCB
-                                                td 09/17/17
-                                                td <a href="#"><span class="info">i</span></a>
-                                            tr
-                                                td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
-                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
-                                                td $21000
-                                                td 20
-                                                td RS
-                                                td RMA
-                                                td ACT
-                                                td FCB
-                                                td 09/17/17
-                                                td <a href="#"><span class="info">i</span></a>
-                                            tr
-                                                td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
-                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
-                                                td $21000
-                                                td 20
-                                                td LS
-                                                td RMA
-                                                td ACT
-                                                td FCB
-                                                td 09/17/17
-                                                td <a href="#"><span class="info">i</span></a>
-                                            tr
-                                                td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
-                                                td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
-                                                td $21000
-                                                td 20
-                                                td ST
+                                                td TE
                                                 td RMA
                                                 td ACT
                                                 td FCB
@@ -923,77 +887,61 @@ section.nl-section.nl-players.nl-create-team
                 div.nl-team-button
                     button.btn.btn-team.btn-big-radius.active(type="button") field view
                     button.btn.btn-team.btn-big-radius(type="button") list view
-                div.nl-team-field
+                div.nl-team-field.football
                     div.striker-line
                     div.midfielder-line
                     div.defender-line
-                    div.player-main-block
-                        div.nl-player-block.nl-G-position(data-position="G")
-                            img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
+                    div.player-main-block.football
+                        div.nl-player-block.nl-FLEX-position(data-position="FLEX")
+                            img(src="assets/img/football/img-FLEX.png" alt="FLEX")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-DL-position(data-position="DL")
-                            img(src="assets/img/img-players.png" alt="goalkeeper")
+                        div.nl-player-block.nl-K-position(data-position="K")
+                            img(src="assets/img/football/img-K.png" alt="K")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-DR-position(data-position="DR")
-                            img(src="assets/img/img-players.png" alt="goalkeeper")
+                        div.nl-player-block.nl-LRB-position(data-position="LRB")
+                            img(src="assets/img/football/img-LRB.png" alt="LRB")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-DAL-position(data-position="DAL")
-                            img(src="assets/img/img-players.png" alt="goalkeeper")
+                        div.nl-player-block.nl-RRB-position(data-position="RRB")
+                            img(src="assets/img/football/img-RRB.png" alt="RRB")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-DAR-position(data-position="DAR")
-                            img(src="assets/img/img-players.png" alt="goalkeeper")
+                        div.nl-player-block.nl-QB-position(data-position="QB")
+                            img(src="assets/img/football/img-QB.png" alt="QB")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-CM-position(data-position="CM")
-                            img(src="assets/img/img-players.png" alt="goalkeeper")
+                        div.nl-player-block.nl-LWR-position(data-position="LWR")
+                            img(src="assets/img/football/img-LWR.png" alt="LWR")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-RWM-position(data-position="RWM")
-                            img(src="assets/img/img-players.png" alt="goalkeeper")
+                        div.nl-player-block.nl-RWR-position(data-position="RWR")
+                            img(src="assets/img/football/img-RWR.png" alt="RWR")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-LWM-position(data-position="LWM")
-                            img(src="assets/img/img-players.png" alt="goalkeeper")
+                        div.nl-player-block.nl-TE-position(data-position="TE")
+                            img(src="assets/img/football/img-TE.png" alt="TE")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-RS-position(data-position="RS")
-                            img(src="assets/img/img-players.png" alt="goalkeeper")
-                            div.nl-player-block--data
-                                button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
-                                p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-LS-position(data-position="LS")
-                            img(src="assets/img/img-players.png" alt="goalkeeper")
-                            div.nl-player-block--data
-                                button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
-                                p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-ST-position(data-position="ST")
-                            img(src="assets/img/img-players.png" alt="goalkeeper")
-                            div.nl-player-block--data
-                                button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
-                                p gronkowski
-                                p.data <span>12.67</span> <span>$42000</span>
+                        div.nl-player-block.nl-team-logo-position
+                            img(src="assets/img/football/team-logo.png" alt="logo")
 
                 div.nl-team-list.nl-my-teams
                     .nl-card-wrapper
@@ -1019,7 +967,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos G
+                                            td.pos FLEX
                                             td 30
                                             td $0
                                             td
@@ -1027,7 +975,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos DL
+                                            td.pos K
                                             td 30
                                             td $0
                                             td
@@ -1035,7 +983,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos DR
+                                            td.pos LRB
                                             td 30
                                             td $0
                                             td
@@ -1043,7 +991,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos DAL
+                                            td.pos RRB
                                             td 30
                                             td $0
                                             td
@@ -1051,7 +999,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos DAR
+                                            td.pos QB
                                             td 30
                                             td $0
                                             td
@@ -1059,7 +1007,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos CM
+                                            td.pos LWR
                                             td 30
                                             td $0
                                             td
@@ -1067,7 +1015,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos RWM
+                                            td.pos RWR
                                             td 30
                                             td $0
                                             td
@@ -1075,31 +1023,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos LWM
-                                            td 30
-                                            td $0
-                                            td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
-                                        tr
-
-                                            td Player name
-                                            td.pos RS
-                                            td 30
-                                            td $0
-                                            td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
-                                        tr
-
-                                            td Player name
-                                            td.pos LS
-                                            td 30
-                                            td $0
-                                            td
-                                                button.btn.btn-primary.btn-sm.btn-warning cut
-                                        tr
-
-                                            td Player name
-                                            td.pos ST
+                                            td.pos TE
                                             td 30
                                             td $0
                                             td
