add/remove team functionality, + mobile

--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -160,7 +160,7 @@ section.nl-section.nl-players.nl-create-team
 
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p G
+                                                            p.nl-position G
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -218,7 +218,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p DL
+                                                            p.nl-position DL
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -271,7 +271,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p DR
+                                                            p.nl-position DR
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -324,7 +324,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p DAL
+                                                            p.nl-position DAL
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -377,7 +377,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p DAR
+                                                            p.nl-position DAR
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -430,7 +430,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p CM
+                                                            p.nl-position CM
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -483,7 +483,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p RWM
+                                                            p.nl-position RWM
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -536,7 +536,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p LWM
+                                                            p.nl-position LWM
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -589,7 +589,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p RS
+                                                            p.nl-position RS
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -642,7 +642,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p LS
+                                                            p.nl-position LS
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -695,7 +695,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p ST
+                                                            p.nl-position ST
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -921,8 +921,8 @@ section.nl-section.nl-players.nl-create-team
                             div.col-6
                                 span 154
                 div.nl-team-button
-                    button.btn.btn-team.btn-big-radius.active(type="button") field view
-                    button.btn.btn-team.btn-big-radius(type="button") list view
+                    button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
+                    button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
                 div.nl-team-field
                     div.striker-line
                     div.midfielder-line
@@ -995,7 +995,7 @@ section.nl-section.nl-players.nl-create-team
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
 
-                div.nl-team-list.nl-my-teams
+                div.nl-team-list.nl-my-teams.hide
                     .nl-card-wrapper
                         .row
                             .col-12
