--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -943,7 +943,7 @@ section.nl-section.nl-players.nl-create-team
                         div.nl-player-block.nl-team-logo-position
                             img(src="assets/img/football/team-logo.png" alt="logo")
 
-                div.nl-team-list.nl-my-teams
+                div.nl-team-list.nl-my-teams.hide
                     .nl-card-wrapper
                         .row
                             .col-12
