--- a/markup/_scss/base/_base.scss
+++ b/markup/_scss/base/_base.scss
@@ -113,3 +113,13 @@ body {
     margin-top: calculateRem(20px);
   }
 }
+
+.hide{
+  display: none;
+  @include respond-to(allsmall){
+    display: block;
+  }
+}
+.visible{
+  display: block;
+}
